--- a/storage/package.json
+++ b/storage/package.json
@@ -12,8 +12,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "apollo-server": "^2.8.1",
+    "apollo-server-express": "^2.8.1",
     "express": "^4.17.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "knex": "^0.19.2",
+    "pg": "^7.12.1"
   }
 }
