--- a/storage/package.json
+++ b/storage/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.8.1",
+    "aws-sdk": "^2.513.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "knex": "^0.19.2",
