remove curl install command from dockerfile

--- a/minio/Dockerfile
+++ b/minio/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /srv
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.5.0/wait /wait
 RUN chmod +x /wait
 
-RUN apk update && apk add curl jq
+RUN apk update && apk add jq
