--- a/configuration/docker-compose.yml
+++ b/configuration/docker-compose.yml
@@ -4,6 +4,12 @@ services:
   etcd1:
     image: gcr.io/etcd-development/etcd:v3.3
     restart: always
+    healthcheck:
+      test: "etcdctl endpoint health"
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     command: /usr/local/bin/etcd --data-dir=/etcd-data
     environment:
       ETCDCTL_API: 3
@@ -14,7 +20,7 @@ services:
       ETCD_ADVERTISE_CLIENT_URLS: http://127.0.0.1:2379
       ETCD_INITIAL_CLUSTER: default=http://127.0.0.1:2380
     ports:
-      - 2379:2379
-      - 2380:2380
+      - "2379:2379"
+      - "2380:2380"
     volumes:
       - ./data:/etcd-data
