replace minio client with aws client.

--- a/minio/Dockerfile
+++ b/minio/Dockerfile
@@ -1,8 +1,6 @@
-FROM minio/mc:latest
+FROM mikesir87/aws-cli:latest
 
 WORKDIR /srv
 
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.5.0/wait /wait
 RUN chmod +x /wait
-
-RUN apk update && apk add jq
