--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -23,3 +23,5 @@ services:
       - minio
     environment:
       WAIT_HOSTS: minio:9000
+      AWS_ACCESS_KEY_ID: longkey
+      AWS_SECRET_ACCESS_KEY: verysecretkey
