provide accurate descriptions

--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   file-ops:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.aws-cli
     working_dir: /srv
     entrypoint: ""
     command: ./scripts/file-operations.sh
