--- a/minio/Makefile
+++ b/minio/Makefile
@@ -2,7 +2,7 @@ stop:
 	docker-compose down -v
 
 file-ops:
-	docker-compose up file-ops
+	docker-compose run --rm --service-ports file-ops
 
 shell:
 	docker-compose run --rm --service-ports file-ops /bin/sh
