--- a/minio/Makefile
+++ b/minio/Makefile
@@ -3,6 +3,7 @@ stop:
 
 file-ops:
 	docker-compose run --rm --service-ports file-ops
+	docker-compose down -v
 
 shell:
 	docker-compose run --rm --service-ports file-ops /bin/sh
