--- a/side-configuration/docker-compose.yml
+++ b/side-configuration/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.4"
 
 services:
   side-configuration:
-    build: .
+    image: side-configuration
     restart: always
     environment:
       CONFIG_URL: ${CONFIG_URL}
     volumes:
-      - ./data:/etc/configuration
+      - /etc/configuration
