--- a/storage/package.json
+++ b/storage/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server-express": "^2.8.1",
     "aws-sdk": "^2.513.0",
+    "connect-busboy": "^0.0.2",
     "express": "^4.17.1",
     "funfix": "^7.0.1",
     "graphql": "^14.4.2",
