--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     command: ["bash", "-c", "yarn && yarn start"]
     environment:
       PG_HOST: database
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
     volumes:
       - .:/storage/:z
     networks:
